<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{c47e991f-c8a6-48c3-a4a7-d83427e5e535}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	mb_Input_Coils	:	ARRAY [0..3] OF BOOL;
 	mb_Output_Coils	:   ARRAY [0..5] OF BOOL;
	
	iState 			: 	INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>